# BiliCacheMerge

./: .gitignore  CMakeLists.txt  INIT_SUMMARY.md  README.md  build.sh  build_mini_ffmpeg.sh  clean_git.sh
..bfg-report/2025-11-05/15-31-07/: cache-stats.txt  object-id-map.old-new.txt
..bfg-report/2025-11-05/15-31-07/protected-dirt/: a53edc16-HEAD.csv
pattern/: Android.pat  Android_movie.pat  UWP_xiaoyaocz_Ver3.pat  WIN10_official.pat
python_src/: CCdownload.py  configFrame.fbp  configFrame_v2.fbp  core.py  file_info.txt  gui.py  gui_bak.py  images.py  main.py  pattern.py  pyproject.toml  utils.py
python_src/shortcut/: shortcut.cpp
qt_src/: CMakeLists.txt  README_BUILD.md  build.sh  run.sh  simple_test.cpp  test_gui.sh  test_resolve.cpp  test_scanner.cpp  test_scanner_cli.cpp  test_simple.cpp
qt_src/config/: default_config.ini
qt_src/docs/: about.txt  faq.txt  help.txt
qt_src/include/: qtbilimerge.h
qt_src/resources/: icons.qrc  resources.qrc
qt_src/src/: main.cpp
qt_src/src/application/: ConfigDialog.h  HelpDialog.cpp  HelpDialog.h  LogViewer.h  MainWindow.cpp  MainWindow.h  ModernMainWindow.h  PatternBuilderDialog.cpp
qt_src/src/converters/: DanmakuConverter.cpp  DanmakuConverter.h  SubtitleDownloader.cpp  SubtitleDownloader.h
qt_src/src/core/: ConfigManager.cpp  ConfigManager.h  DanmakuConverter.cpp  DanmakuConverter.h  FfmpegManager.cpp  FfmpegManager.h  FileManager.cpp  FileManager.h  FileScanner.cpp  FileScanner.h  MergeThread.cpp  MergeThread.h  MergeWorker.cpp  MergeWorker.h  PatternManager.cpp  PatternManager.h  SubtitleDownloader.cpp  Utils.cpp  Utils.h
qt_src/src/gui/: DropLineEdit.cpp  DropLineEdit.h  MainWindow.cpp  MainWindow.h
qt_src/src/network/: HttpClient.cpp  HttpClient.h
qt_src/src/utils/: FileUtils.h  IconManager.cpp  IconManager.h  JsonUtils.h  Logger.cpp  Logger.h
qt_src/tests/: CMakeLists.txt
resources/: app.rc
src/application/: ConfigDialog.cpp  HelpDialog.cpp  LogViewer.cpp  MainWindow.cpp  MainWindow.h  PatternBuilderDialog.h
src/core/: ConfigManager.cpp  ConfigManager.h  CoverDownloader.cpp  CoverDownloader.h  DanmakuConverter.cpp  FileScanner.cpp  MergeThread.cpp  PatternManager.cpp  PatternManager.h  SubtitleDownloader.h
